spacing and naming fix

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,12 @@
 body {
   background-color: green;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 .page-bg {
   background: url('/static/images/bg.jpg');
   -webkit-filter: blur(80px);
